docs/examples/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: test
spec:
  controllerName: "adamland.xyz/cf-tunnel-controller"
  parametersRef:
    group: ""
    kind: Secret
    name: test-gateway-config
    namespace: default
