docs/examples/hello_world_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2024-09-08T20:56:49Z"
  generation: 1
  labels:
    app: hello-world
  name: hello-world
  namespace: default
  resourceVersion: "57287"
  uid: e7836d79-68d2-4fcf-8320-55ce948b016c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-world
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
        - image: boxboat/hello-world-webapp
          imagePullPolicy: Always
          name: hello-world-webapp
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
