docs/examples/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
spec:
  #  https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.ParentReference
  parentRefs:
    - group: gateway.networking.k8s.io/v1
      kind: Gateway
      name: test
      namespace: default
  hostnames: [hello-world.adamland.xyz]
  rules:
  # https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.HTTPRouteRule
  - backendRefs:
      #  https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.HTTPBackendRef
    - group: ""
      kind: service
      name: hello-world
      namespace: default
      port: 8080
